--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="#">
+    <meta property="og:url" content="https://профналог.рус/">
     <meta property="og:title" content="Защита прав предпринимателей | Юридическая помощь при спорах с ФНС">
     <meta property="og:description"
         content="Профессиональная юридическая защита предпринимателей при налоговых проверках, доначислениях и блокировке счетов. Бесплатная консультация.">
@@ -29,7 +29,7 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="#">
+    <meta property="twitter:url" content="https://профналог.рус/">
     <meta property="twitter:title" content="Защита прав предпринимателей | Юридическая помощь при спорах с ФНС">
     <meta property="twitter:description"
         content="Профессиональная юридическая защита предпринимателей при налоговых проверках, доначислениях и блокировке счетов. Бесплатная консультация.">
@@ -53,13 +53,8 @@
     {% block headPlace %}{% endblock %}
 
     <style>
-        {
-            % block styles %
-        }
-
-            {
-            % endblock %
-        }
+        {% block styles %}
+        {% endblock %}
     </style>
 </head>
 
