--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="256x256" href="/static/img/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="/static/img/apple.png">
+    <link rel="canonical" href="http://профналог.рус/">
 
     <!-- Стили и шрифты -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
