--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://профналог.рус/">
+    <meta property="og:url" content="https://xn--80agxgedci1b.xn--p1acf/">
     <meta property="og:title" content="Защита прав предпринимателей | Юридическая помощь при спорах с ФНС">
     <meta property="og:description"
         content="Профессиональная юридическая защита предпринимателей при налоговых проверках, доначислениях и блокировке счетов. Бесплатная консультация.">
@@ -29,7 +29,7 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://профналог.рус/">
+    <meta property="twitter:url" content="https://xn--80agxgedci1b.xn--p1acf/">
     <meta property="twitter:title" content="Защита прав предпринимателей | Юридическая помощь при спорах с ФНС">
     <meta property="twitter:description"
         content="Профессиональная юридическая защита предпринимателей при налоговых проверках, доначислениях и блокировке счетов. Бесплатная консультация.">
@@ -43,7 +43,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="256x256" href="/static/img/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="/static/img/apple.png">
-    <link rel="canonical" href="http://профналог.рус/">
+    <link rel="canonical" href="http://xn--80agxgedci1b.xn--p1acf/">
 
     <!-- Стили и шрифты -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
