--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
     <meta property="og:description"
         content="Профессиональная юридическая защита предпринимателей при налоговых проверках, доначислениях и блокировке счетов. Бесплатная консультация.">
     <meta property="og:image"
-        content="https://images.unsplash.com/photo-1589829545856-d10d557cf95f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&h=630&q=80">
+        content="/static/img/background.avif">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="ПрофНалог">
@@ -34,11 +34,11 @@
     <meta property="twitter:description"
         content="Профессиональная юридическая защита предпринимателей при налоговых проверках, доначислениях и блокировке счетов. Бесплатная консультация.">
     <meta property="twitter:image"
-        content="https://images.unsplash.com/photo-1589829545856-d10d557cf95f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&h=630&q=80">
+        content="/static/img/background.avif">
 
     <!-- VK -->
     <meta property="vk:image"
-        content="https://images.unsplash.com/photo-1589829545856-d10d557cf95f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&h=630&q=80">
+        content="/static/img/background.avif">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="256x256" href="/static/img/favicon.ico">
