--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <section class="hero" id="home">
     <div class="hero-overlay"></div>
     <div class="hero-image">
-        <img src="https://images.unsplash.com/photo-1589829545856-d10d557cf95f?ixlib=rb-4.0.3" alt="Юридическая защита">
+        <img src="/static/img/background.avif" alt="Юридическая защита">
     </div>
     <div class="container hero-content">
         <div class="hero-text">
