--- a/templates/base.html
+++ b/templates/base.html
@@ -46,6 +46,10 @@
     <link rel="canonical" href="http://xn--80agxgedci1b.xn--p1acf/">
 
     <!-- Стили и шрифты -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans:wght@400;600&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="/static/css/styles.css">
     {% block headPlace %}{% endblock %}
 
